--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "url": "https://github.com/petkaantonov/vscode-multi-command.git"
     },
     "engines": {
-        "vscode": "^1.10.0"
+        "vscode": "^1.76.1"
     },
     "extensionKind": [
         "ui",
@@ -70,19 +70,21 @@
     },
     "scripts": {
         "vscode:prepublish": "npm run compile",
-        "compile": "tsc -p ./",
+        "compile": "node_modules/typescript/bin/tsc -p ./",
         "watch": "tsc -watch -p ./",
         "postinstall": "node ./node_modules/vscode/bin/install",
         "test": "npm run compile && node ./node_modules/vscode/bin/test"
     },
     "devDependencies": {
-        "typescript": "^3.9.7",
-        "vscode": "^1.0.0",
-        "mocha": "^2.3.3",
+        "@types/mocha": "^2.2.32",
         "@types/node": "^7.0.7",
-        "@types/mocha": "^2.2.32"
+        "mocha": "^2.3.3",
+        "typescript": "^4.9.5",
+        "vscode-test": "^1.6.1"
     },
     "dependencies": {
+        "@types/vscode": "^1.76.0",
+        "tsc": "^2.0.4",
         "vscode-variables": "^0.1.3"
     }
 }
